# orina2api

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt  start.py
.github/workflows/: ci.yml  release.yml
app/: __init__.py  main.py
app/api/: system.py  v1.py
app/core/: __init__.py  config.py
app/middleware/: auth.py
app/models/: schemas.py
app/services/: proxy.py  token_manager.py
scripts/: release.sh  setup-dev.sh
tests/: test_api.py
